<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="label">NMedia</string>
    <string name="avatar">Avatar</string>
    <string name="menu">Menu</string>
    <string name="share">Share</string>
    <string name="likes">Likes</string>
    <string name="viewings">Viewings</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="content_hint">Content</string>
    <string name="save">Save</string>
    <string name="empty_post_error">Content must not be empty</string>
    <string name="cancelEditor">Сancel Editor</string>
    <string name="cancel_editing">Cancel Editing</string>
    <string name="chooser_share_post">Share post</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="play_button">PlayButton</string>
    <string name="add">Add</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_published_new_post">User %1$s published a new post:</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
</resources>