<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/post_avatar_drawable" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="#000099"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@+id/menu"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toStartOf="@+id/menu"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/author"
        tools:text="@sample/posts.json/data/published" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrierAvatar"
        tools:text="@sample/posts.json/data/content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/menuStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/menu"
        app:backgroundTint="@android:color/transparent"
        app:icon="@drawable/check_menu"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, published" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likes"
        style="@style/likeStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing_checkbox"
        android:checkable="true"
        android:contentDescription="@string/likes"
        app:backgroundTint="@android:color/transparent"
        app:iconPadding="0dp"
        app:icon="@drawable/check_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrierContent"
        tools:checked="true"
        tools:text="@sample/posts.json/data/likes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/shareStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_to_icon"
        android:layout_marginTop="@dimen/common_spacing_checkbox"
        android:checkable="true"
        android:contentDescription="@string/share"
        app:backgroundTint="@android:color/transparent"
        app:iconPadding="0dp"
        app:icon="@drawable/check_share"
        app:layout_constraintBottom_toBottomOf="@+id/likes"
        app:layout_constraintStart_toEndOf="@+id/likes"
        app:layout_constraintTop_toBottomOf="@+id/barrierContent"
        tools:checked="true"
        tools:text="@sample/posts.json/data/share" />

    <ImageView
        android:id="@+id/viewings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/viewings"
        app:layout_constraintBottom_toBottomOf="@+id/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/share"
        app:srcCompat="@drawable/visibility_24" />

    <TextView
        android:id="@+id/viewingsCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/distance_to_icon"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintBottom_toBottomOf="@+id/viewings"
        app:layout_constraintStart_toEndOf="@+id/viewings"
        app:layout_constraintTop_toTopOf="@+id/viewings"
        tools:text="@sample/posts.json/data/viewings" />

</androidx.constraintlayout.widget.ConstraintLayout>